Made more changes to make sure it does not break at any width

--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -67,7 +67,7 @@ footer {
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
   .events {
     width: auto;
@@ -92,6 +92,6 @@ footer {
     grid-template-columns: 1fr;
   }
 
-  
+
 
 }
