--- a/src/components/articles/Articles.css
+++ b/src/components/articles/Articles.css
@@ -52,7 +52,7 @@
     margin: 0;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
     .article-content-box {
         margin-bottom: 80px;
