--- a/src/components/datecard/Datecard.css
+++ b/src/components/datecard/Datecard.css
@@ -15,12 +15,18 @@
     z-index: 1;
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
     .datecard {
         margin: 5px 15px;
         font-size: 30px;
     }
+}
 
+@media screen and (max-width: 360px) {
+
+    .datecard {
+        font-size: 24px;
+    }
 
 }
