--- a/src/components/events/Event.css
+++ b/src/components/events/Event.css
@@ -54,7 +54,7 @@
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 1050px) {
 
     .events__card {
         width: 100%;
