--- a/src/components/filter/Filter.css
+++ b/src/components/filter/Filter.css
@@ -1,9 +1,16 @@
 .filter {
-    width: 100%;
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 70px; 
     padding: 15px 50px;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
+}
+
+.filter__buttons {
+    overflow: scroll;
+    display: flex;
+    flex-wrap: nowrap;
 }
 
 .filter__button {
@@ -27,32 +34,27 @@
     .filter {
         display: flex;
         align-items: center;
-        padding: 30px 50px;
-        width: 100%;
+        padding: 30px 0px 30px 50px;
         height: 50px; 
     }
 
     .filter__buttons {
-        overflow: scroll;
-        display: flex;
-        flex-wrap: nowrap;
         width: 100%;
     }
 
     .filter h2 {
         margin: 0;
-        margin-right: 25%;
+        margin-right: 15vw;
         font-weight: normal;
     }
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
     .filter {
-        width: 100%;
         height: 30px;
-        padding: 10px 20px;
+        padding: 10px 0 10px 20px;
         margin-bottom: 30px;
     }
 
