--- a/src/components/image-stack/ImageStack.scss
+++ b/src/components/image-stack/ImageStack.scss
@@ -50,7 +50,7 @@ $deg3: random(10) + deg;
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
     .image-stack {
         margin: 50px auto 20px;
