--- a/src/components/mainArticle/MainArticle.css
+++ b/src/components/mainArticle/MainArticle.css
@@ -117,7 +117,7 @@
 
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 690px) {
 
     .main-article {
         margin: 40px 15px;
